# evahan2026

./: .env.example  .gitignore  Makefile  README.md  TRAIN.md  lint.sh  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
docs/: EvaHan_2026_Registration.xlsx  swift.md  实验.md  技术报告.md  指标测算.docx  问题与解答.docx
run_results/: diff_v0_v1.json  diff_v0_v2.json  diff_v0_v3.json  diff_v0_v4.json  diff_v0_v5.json  diff_v0_v6.json  diff_v0_v7.json  diff_v0_v8.json  diff_v0_v9.json  diff_v0_va.json  diff_v0_vz.json  diff_v1_v2.json
run_results/v0_qwen25vl7bchat/: Task_A.json  Task_A.jsonl
run_results/v0_qwen25vl7bunsft/: Task_C.json  Task_C.jsonl  deploy_a800_qwen.sh
run_results/v1_lora_a800_05850/: Task_A.jsonl  sft_ocr_a800_8_lora.sh
run_results/v1_lora_a800_5850/: Task_A.json  Task_C.json  Task_C.jsonl  deploy_a800.sh
run_results/v2_lora_a800_07200/: Task_C.json
run_results/v2_lora_a800_7200/: Task_A.json  Task_A.jsonl  Task_C.jsonl
run_results/v3_lora_a800_09000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v4_lora_a800_10000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v5_lora_a800_11000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v6_lora_a800_12000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v7_lora_a800_13000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v8_lora_a800_14000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/v9_lora_a800_15000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/va_lora_a800_16000/: Task_A.json  Task_A.jsonl  Task_C.json  Task_C.jsonl
run_results/vz_liuyulongsftresult/: Task_A.json  Task_C.json
scripts/: SCRIPT.md  awq.sh  deploy.sh  deploy_a800.sh  deploy_a800_ocr.sh  deploy_vllm.sh  merge_lora.sh  sft.sh  sft_4090.sh  sft_a800.sh  sft_layout.sh  sft_ocr_a800.sh  sft_ocr_a800_1.sh  sft_ocr_a800_8.sh  sft_ocr_a800_8_full.sh  train_evahan.sh  train_evahan_yolo.sh
src/evahan/: __init__.py  argument.py  check_vocab.py  client.py  config.py  convert.py  convert_swift.py  core.py  dataset.py  dataset_bbox.py  eval.py  (+19 more)
(+28 files in other folders)
