[project]
name = "evahan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "夏天", email = "xiat@ruc.edu.cn" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
evahan = "evahan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
